# routes/shirts.js
@@ -2,12 +2,29 @@ const express = require('express');
 const router = express.Router();
 
 const shirtsController = require('../controllers/shirts');
-const validateShirt = require('../middlewares/shirts');
+const {isAuthenticated} = require('../middlewares/auth');
 
-router.get('/', shirtsController.getAll);
-router.get('/:id', shirtsController.getSingle);
-router.post('/', validateShirt.saveShirt, shirtsController.shirtCreate);
-router.put('/:id', validateShirt.saveShirt, shirtsController.shirtUpdate);
-router.delete('/:id', shirtsController.shirtDelete);
+router.get('/', 
+//#swagger.tags = ['Shirts'],
+shirtsController.getAll);
+
+router.get('/:id',
+//#swagger.tags = ['Shirts'],
+shirtsController.getSingle);
+
+// #swagger.security = [{ SessionAuth: [] }]
+router.post('/',
+//#swagger.tags = ['Shirts'],
+isAuthenticated, shirtsController.shirtCreate);
+
+// #swagger.security = [{ SessionAuth: [] }]
+router.put('/:id',
+//#swagger.tags = ['Shirts'],
+isAuthenticated, shirtsController.shirtUpdate);
+
+// #swagger.security = [{ SessionAuth: [] }]
+router.delete('/:id',
+//#swagger.tags = ['Shirts'],
+isAuthenticated, shirtsController.shirtDelete);
 
 module.exports = router;
