# routes/swagger.js
@@ -3,6 +3,10 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+
+
+router.get('/api-docs', 
+// #swagger.tags = ['Documentation']
+swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
