# server.js
@@ -6,10 +6,24 @@ const swagger = require('./routes/swagger.js');
 const mongodb = require('./data/database.js');
 const bodyParser = require('body-parser');
 const cors = require('cors');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
 
 const app = express();
 
 app.use(bodyParser.json());
+
+app.use(
+  session({
+    secret: 'supersecret',
+    resave: false,
+    saveUninitialized: true
+  })
+);
+
+app.use(passport.initialize());
+app.use(passport.session());
 
 app.use(cors({
   origin: '*',
@@ -27,10 +41,39 @@ app.use((req, res, next) => {
   next();
 });
 
+passport.use(
+  new GitHubStrategy(
+    {
+      clientID: process.env.GITHUB_CLIENT_ID,
+      clientSecret: process.env.GITHUB_CLIENT_SECRET,
+      callbackURL: process.env.GITHUB_CALLBACK_URL 
+    },
+    (accessToken, refreshToken, profile, done) => {
+      return done(null, profile);
+    }
+  )
+);
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
 
 app.use('/', routes);      
 app.use('/swagger', swagger); 
 
+app.get('/', (req, res) => {
+   res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged Out');
+  });
+
+app.get('/github/callback',passport.authenticate('github', {
+  failureRedirect: '/api-docs', session: false}), 
+  (req, res) => {
+  req.session.user = req.user;
+  res.redirect('/');
+});
 
 process.on('uncaughtException', (err, origin) => {
   console.error(
